--- a/public/styles/driver.css
+++ b/public/styles/driver.css
@@ -96,6 +96,8 @@
         justify-content:space-around;
         width:90%;
         height:90%;
+       position:absolute;
+       top:10%;
       }
       .thispage {
         top:10vh;
