--- a/public/styles/driver.css
+++ b/public/styles/driver.css
@@ -123,7 +123,7 @@
         box-sizing:border-box; 
       }
       button {
-        background-color:blue;
+        background-color:#30a72f;
         color:white;
        
         border: none;
